# genesis_vpn

./: .gitignore  README.md  add_new_client.sh  prepare_full_archive.sh  requirements.txt  setup.cfg  tox.ini  version.py
.github/workflows/: build.yml  publish-to-pypi.yml  tests.yaml
etc/genesis_vpn/: client_config.j2  genesis_vpn.conf  logging.yaml
etc/openvpn/: server.conf  up.sh
etc/systemd/: genesis-vpn-server-agent.service  genesis-vpn-user-api.service
genesis/: genesis.yaml
genesis/images/: install.sh
genesis_vpn/cmd/: bootstrap.py  cli.py  import_certs.py  server_agent.py  user_api.py
genesis_vpn/common/: cert.py  config.py  constants.py  ovpn_config.py  permissions.py
genesis_vpn/dm/: models.py
genesis_vpn/services/: server_agent.py
genesis_vpn/user_api/api/: app.py  controllers.py  routes.py
migrations/: 0000-init-tables-40a307.py
