[metadata]
name = genesis_vpn
summary = Genesis VPN: easy to use VPN for secure access.
description_file =
    README.md
long_description_content_type = text/markdown
author = Genesis Corporation
author_email = mail@gmelikov.ru
home_page = https://github.com/infraguys/genesis_vpn/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[files]
packages =
    genesis_vpn


[entry_points]
console_scripts =
    genesis-vpn-user-api = genesis_vpn.cmd.user_api:main
    genesis-vpn-bootstrap = genesis_vpn.cmd.bootstrap:main
    genesis-vpn-cli = genesis_vpn.cmd.cli:main
    genesis-vpn-server-agent = genesis_vpn.cmd.server_agent:main
    genesis-vpn-import-certs  = genesis_vpn.cmd.import_certs:main
